--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -83,10 +83,10 @@ const stack = [
             Hello, I am ...
           </p>
           <p class='animated text-2xl md:text-3xl lg:text-4xl font-bold uppercase text-black dark:text-white'>
-            Astro Sphere
+            Chung Chih
           </p>
           <p class='animated text-sm md:text-base lg:text-lg opacity-75'>
-            Currently designing products for humans.
+            <!--Currently designing products for humans.-->
           </p>
           <div id="ctaButtons" class='animated flex flex-wrap gap-4 justify-center mt-5'>
             <a href='/blog' class='py-2 px-4 rounded truncate text-xs md:text-sm lg:text-base bg-black dark:bg-white text-white dark:text-black hover:opacity-75 blend'>
@@ -107,12 +107,12 @@ const stack = [
       <!-- About Section -->
       <section class="animate">
         <article>
-          <p>I am a <b><i>software engineer</i></b>, <b><i>ui/ux designer</i></b>, <b><i>product planner</i></b>, <b><i>mentor</i></b>, <b><i>student</i></b>, <b><i>minimalist</i></b>, <b><i>eternal optimist</i></b>, <b><i>crypto enthusiast</i></b> and <b><i>sarcasm connoisseur</i></b>.</p>
+          <p>I am a <b><i>software engineer</i></b>, <b><i>surfer</i></b>, <b><i>photographer</i></b>.</p>
           <p>I love to both build and break things. I am motivated by challenging projects with self-guided research and dynamic problem solving. My true passion is crafting creative front end designs with unique takes on color, typography and motion.</p>
           <p>During my career</p>
           <p>I have built products ranging from marketing and ecommerce websites to complex enterprise apps with focus on delivering fast, elegant code along with delightful user interfaces.</p>
           <p>Now</p>
-          <p>I currently work as a software engineer at StreamlineFS, where I do product planning, design and development.</p>
+          <p>I currently work as a backend team lead at Authme, where I do product planning, design and development.</p>
         </article>
       </section>
 
@@ -140,30 +140,30 @@ const stack = [
       </section>
 
       <!-- Tech Stack Section -->
-      <section class="animate">
-        <div class="space-y-4">
-          <p class="font-semibold text-black dark:text-white">
-            Website build with
-          </p>
-          <div class="flex flex-wrap items-center gap-2 mt-5">
-            {stack.map(item => (
-              <StackCard 
-                text={item.text}
-                icon={item.icon}
-                href={item.href}
-              />
-            ))}
-          </div>
-          <div>
-            Performing reactivity and statefulness, special guest
-            <a href="https://www.solidjs.com/" target="_blank" class="w-fit group underline decoration-[.5px] decoration-black/25 dark:decoration-white/50 hover:decoration-black dark:hover:decoration-white text-black dark:text-white underline-offset-2 blend">
-              <span class="text-black/75 dark:text-white/75 group-hover:text-black group-hover:dark:text-white blend">
-                SolidJS
-              </span>
-            </a>
-          </div>
-        </div>
-      </section>
+      <!--<section class="animate">-->
+      <!--  <div class="space-y-4">-->
+      <!--    <p class="font-semibold text-black dark:text-white">-->
+      <!--      Website build with-->
+      <!--    </p>-->
+      <!--    <div class="flex flex-wrap items-center gap-2 mt-5">-->
+      <!--      {stack.map(item => (-->
+      <!--        <StackCard -->
+      <!--          text={item.text}-->
+      <!--          icon={item.icon}-->
+      <!--          href={item.href}-->
+      <!--        />-->
+      <!--      ))}-->
+      <!--    </div>-->
+      <!--    <div>-->
+      <!--      Performing reactivity and statefulness, special guest-->
+      <!--      <a href="https://www.solidjs.com/" target="_blank" class="w-fit group underline decoration-[.5px] decoration-black/25 dark:decoration-white/50 hover:decoration-black dark:hover:decoration-white text-black dark:text-white underline-offset-2 blend">-->
+      <!--        <span class="text-black/75 dark:text-white/75 group-hover:text-black group-hover:dark:text-white blend">-->
+      <!--          SolidJS-->
+      <!--        </span>-->
+      <!--      </a>-->
+      <!--    </div>-->
+      <!--  </div>-->
+      <!--</section>-->
 
       <!-- Project Preview Section -->
       <section class="animate">
@@ -212,6 +212,7 @@ const stack = [
                 </a>
               </div>
             ))}
+          </div>
         </div>
       </section>
     </div>
