--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -33,3 +33,20 @@ const { title, summary } = post.data
     </div>
   </BottomLayout>
 </PageLayout>
+
+<script src="https://giscus.app/client.js"
+        data-repo="js00000000/blog"
+        data-repo-id="R_kgDOM37YrQ"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOM37Yrc4Ci44d"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="preferred_color_scheme"
+        data-lang="zh-TW"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+</script>
